add-on package fits the Apache UIMA directory structure and adds a directory 
called "addons/annotator" that contains the following annotator components:
 - DictionaryAnnotator
 - RegularExpressionAnnotator
 - Tagger
 - WhitespaceTokenizer


3. Major Changes in this Release

The Apache UIMA annotator package release version 2.2.2 is the first release 
of this package. The package contains four new components. These are:
 - DictionaryAnnotator
 - RegularExpressionAnnotator
 - Tagger
 - WhitespaceTokenizer
For a list of all JIRA issues fixed with the current Sandbox release, 
please refer to chapter 6. "List of JIRA Issues Fixed in this Release". 


4. How to Get Involved

The Apache UIMA project really needs and appreciates any contributions, 
including documentation help, source code and feedback.  If you are interested
in contributing, please visit http://incubator.apache.org/uima/get-involved.html.


5. How to Report Issues

The Apache UIMA project uses JIRA for issue tracking.  Please report any 
issues you find at http://issues.apache.org/jira/browse/uima.


6. List of JIRA Issues Fixed in this Release

Release Notes - UIMA - Version 2.2.2

** Bug
    * [UIMA-444] - Sandbox projects build only when in same directory as uimaj projects
    * [UIMA-588] - fix RegularExpressionAnnotator tests - add type priorities to get the same results for all JVMs
    * [UIMA-612] - add License and Notice files
    * [UIMA-613] - remove compiler warnings after moving to Java 1.5
    * [UIMA-614] - remove compiler warnings after moving to Java 1.5
    * [UIMA-617] - change POM to work with Java 1.5
    * [UIMA-620] - switch concept file parsing from File to InputStream
    * [UIMA-621] - change the way to add the compiled sources to the PEAR package
    * [UIMA-625] - update DictionaryAnnotator message catalog
    * [UIMA-646] - remove classpath as required argument for the PEAR packaging plugin
    * [UIMA-653] - allow feature normalization also on non-String based features