@@ -75,11 +75,14 @@ called "addons/annotator" that contains the following annotator components: <br>
 <h2><a name="major.changes">3. Major Changes in this Release</a></h2>
 <p>
 The Apache UIMA annotator package release version 2.2.2 is the first release 
-of this package. The package contains four new components. These are: <br>
+of this package. The package contains the following components: <br>
  - DictionaryAnnotator <br>
  - RegularExpressionAnnotator <br>
  - Tagger <br>
  - WhitespaceTokenizer <br>
+ - SimpleServer <br>
+ - PearPackagingAntTask <br>
+ - PearPackagingMavenPlugin <br>
 For a list of all JIRA issues fixed with the current Sandbox release, 
 please refer to chapter <a href="#list.issues">6. List of JIRA Issues Fixed in this Release</a>. 
 </p> 
@@ -104,7 +107,7 @@ issues you find at
 <h2><a name="list.issues">6. List of JIRA Issues Fixed in this Release</a></h2>
     
 
-        Release Notes - UIMA - Version 2.2.2
+       Release Notes - UIMA - Version 2.2.2
         
 <h2>        Bug
 </h2>
@@ -196,6 +199,10 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-947'>UIMA-947</a>] -         Documentation: resources path in web.xml incorrect
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-953'>UIMA-953</a>] -         &quot;\&quot; in regex variables are not escaped
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-970'>UIMA-970</a>] -         update annotator package release files
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-971'>UIMA-971</a>] -         minor documentation updates for PearPackagingMavenPlugin
 </li>
 </ul>
     
@@ -327,7 +334,7 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-682'>UIMA-682</a>] -         update Sandbox components to work on the new uimaj-2.2.1-incubating release
 </li>
 </ul>
-            
+     
                         
 </body>
 </html>
